Attempting to fix manual edit source code feature.